# CE4071_network_science

./: .gitignore  Makefile  README.md  dblp_parser.py  main.ipynb  requirements.txt
dblp/: .gitignore  Cargo.toml  dblp.pyi  dblp_trunc.xml
dblp/src/: dataset.rs  db.rs  lib.rs
dblp/src/dataset/: data_items.rs  db_items.rs  xml_items.rs
networkscience/: __init__.py  args.py  parsing.py  visuals.py
project/: README.md
report/: bib.bib  bib.yaml  main.typ
