[package]
name = "dblp"
version = "0.1.0"
edition = "2021"
description = "A simple tool to query the DBLP database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dblp"
crate-type = ["cdylib"]

[dependencies]
serde = {version = "1", features = ["derive"]}
quick-xml = {version = "0", features = ["serialize"]}
# lazy_static = "1"
pyo3 = { version = "0.21.0", features = ["extension-module"] }
flate2 = "1"
regex = "1"

log = "0.4"
