[package]
name = "dblp"
version = "0.1.0"
edition = "2021"
description = "A simple tool to parse and organize the contents of the DBLP dataset"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dblp"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0", features = ["serialize", "overlapped-lists"] }
chrono = { version = "0", features = ["serde"] }
# lazy_static = "1"
pyo3 = { version = "0.21.0", features = ["extension-module"] }
flate2 = "1"
regex = "1"
log = "0.4"
rusqlite = { version = "0", features = ["bundled"] }
r2d2 = "0"
r2d2_sqlite = "0"
csv = "1"
rayon = "1"
scheduled-thread-pool = "0"
num_cpus = "1"

[profile.release]
# lto = true
